--- a/src/input.css
+++ b/src/input.css
@@ -25,3 +25,7 @@ body {
 .hamburger-active > span:nth-child(3) {
   @apply -rotate-45;
 }
+
+.hero-image {
+  background-image: url("/img/testing.jpg");
+}
