--- a/src/output.css
+++ b/src/output.css
@@ -813,6 +813,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-hero-image {
+  background-image: url(/img/testing.jpg);
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1021,10 +1025,6 @@ body {
 .hamburger-active > span:nth-child(3) {
   --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hero-image {
-  background-image: url("/img/testing.jpg");
 }
 
 .hover\:border-primary:hover {
